[gd_scene load_steps=14 format=3 uid="uid://ddfstxwlh5srh"]

[ext_resource type="Script" path="res://assets/scripts/hud.gd" id="1_2sx3b"]
[ext_resource type="Texture2D" uid="uid://ddilf6c14vh3p" path="res://assets/textures/icon_happy_face2.svg" id="1_hky06"]
[ext_resource type="Texture2D" uid="uid://b3kg03v3e5b2t" path="res://assets/textures/icon_electric_bolt.svg" id="2_b0ncn"]
[ext_resource type="FontFile" uid="uid://b27oj5irukw3e" path="res://assets/fonts/Itim-Regular.ttf" id="3_pcufw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ihfn"]
bg_color = Color(0.93, 0.8649, 0.7347, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.211765, 0.180392, 0.203922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g120k"]
bg_color = Color(0.211765, 0.180392, 0.203922, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0io8q"]
bg_color = Color(0.21, 0.1785, 0.203175, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.658824)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dail5"]
bg_color = Color(0.89385, 0.531, 0.9, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 4
border_width_bottom = 1
border_color = Color(0.96298, 0.827466, 0.96187, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prcdg"]
bg_color = Color(0.3588, 0.75164, 0.92, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 4
border_width_bottom = 1
border_color = Color(0.76, 0.928, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sws0b"]
bg_color = Color(0.211765, 0.180392, 0.203922, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.211765, 0.180392, 0.203922, 1)
corner_radius_top_right = 15

[sub_resource type="LabelSettings" id="LabelSettings_ge3fv"]
line_spacing = 0.0
font = ExtResource("3_pcufw")
font_size = 70
font_color = Color(0.929412, 0.866667, 0.733333, 1)
outline_size = 9
outline_color = Color(0.0505108, 0.0505108, 0.0505108, 1)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7vp8"]
bg_color = Color(0.2577, 0.246, 0.3, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.211765, 0.180392, 0.203922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_amr05"]
line_spacing = 0.0
font = ExtResource("3_pcufw")
font_size = 40
font_color = Color(0.4992, 0.522667, 0.64, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_2sx3b")

[node name="Bars" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -705.0
offset_top = 15.0
offset_right = 705.0
offset_bottom = 181.0
grow_horizontal = 2

[node name="ProgressBars" type="Panel" parent="Bars"]
layout_mode = 1
offset_right = 546.0
offset_bottom = 166.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0ihfn")

[node name="HappyFace" type="Panel" parent="Bars/ProgressBars"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 75.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g120k")

[node name="TextureRect" type="TextureRect" parent="Bars/ProgressBars/HappyFace"]
layout_mode = 1
offset_right = 60.0
offset_bottom = 60.0
texture = ExtResource("1_hky06")
expand_mode = 1

[node name="LightningBolt" type="Panel" parent="Bars/ProgressBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_g120k")

[node name="TextureRect2" type="TextureRect" parent="Bars/ProgressBars/LightningBolt"]
layout_mode = 1
offset_right = 60.0
offset_bottom = 60.0
texture = ExtResource("2_b0ncn")
expand_mode = 1

[node name="happy_bar" type="ProgressBar" parent="Bars/ProgressBars"]
layout_mode = 1
offset_left = 95.0
offset_top = 23.0
offset_right = 532.0
offset_bottom = 68.0
theme_override_styles/background = SubResource("StyleBoxFlat_0io8q")
theme_override_styles/fill = SubResource("StyleBoxFlat_dail5")
value = 69.0
show_percentage = false

[node name="energy_bar" type="ProgressBar" parent="Bars/ProgressBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_top = -68.0
offset_right = 532.0
offset_bottom = -23.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0io8q")
theme_override_styles/fill = SubResource("StyleBoxFlat_prcdg")
max_value = 180.0
step = 1.0
value = 20.0
show_percentage = false

[node name="InfoBar" type="Panel" parent="Bars"]
z_index = -1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -884.0
offset_bottom = 83.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_sws0b")

[node name="current_keys" type="Label" parent="Bars/InfoBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -48.0
offset_right = 518.0
offset_bottom = 48.0
grow_vertical = 2
text = "q a o l"
label_settings = SubResource("LabelSettings_ge3fv")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Panel" type="Panel" parent="Bars/InfoBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -15.9
offset_bottom = 54.1
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_o7vp8")

[node name="current_level" type="Label" parent="Bars/InfoBar/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -33.0
offset_right = 83.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "level 5"
label_settings = SubResource("LabelSettings_amr05")
horizontal_alignment = 1
vertical_alignment = 1
